<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/meaning"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-72dp"
                android:layout_marginTop="14dp"
                android:text="@string/word2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="7dp"
                android:layout_marginTop="14dp"
                android:layout_toEndOf="@+id/textView2"
                android:text="@string/word"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/word"
                android:text="@string/meaning1"
                android:layout_marginTop="11dp"/>

            <TextView
                android:id="@+id/meaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/word"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="14dp"
                android:layout_marginTop="11dp"
                android:layout_toEndOf="@+id/textView3"
                android:text="@string/meaning" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/meaning"
                android:text="@string/example1"
                android:layout_marginTop="11dp"/>

            <TextView
                android:id="@+id/example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/meaning"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="11dp"
                android:layout_toEndOf="@+id/textView4"
                android:text="@string/example" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/example"
                android:layout_marginTop="11dp"
                android:text="@string/antonyms2" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/synonyms1"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="11dp"/>

            <TextView
                android:id="@+id/antonym"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView5"
                android:layout_marginStart="16dp"
                android:layout_marginTop="11dp"
                android:layout_toEndOf="@+id/textView6"
                android:text="@string/antonym" />

            <TextView
                android:id="@+id/synonym"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView6"
                android:layout_marginStart="4dp"
                android:layout_marginTop="-1dp"
                android:layout_toEndOf="@+id/textView6"
                android:text="@string/synonym" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>